--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
-"build": "npm run generate-html && vite build",
-"generate-html": "mkdir -p dist && cp index.html dist/"
+  "name": "wander",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "parcel-bundler": "^1.6.1",
+    "next": "^12.1.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "scripts": {},
+  "devDependencies": {}
 }
